[package]
name = "rad_io"
version = "0.1.0"
authors = ["Raffael Zica <1042414+SirJson@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = { git = "https://github.com/rust-embedded/gpio-cdev.git", features = ["async-tokio"] }
nix = "0.20.0"
log = "0.4.14"
simplelog = { version = "0.10.0", features = ["termcolor"] }
anyhow = "1.0.40"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.14" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
zbus = "1.9.1"
zvariant = "2.6.0"
zvariant_derive = "2.6.0"
logind-zbus = "0.7.1"
